feat: implement user management modals and backend repository security features alongside environment and deployment documentation